WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27360
[Chromium] Fix build with DOM_STORAGE enabled.
https://bugs.webkit.org/show_bug.cgi?id=27360
Summary
[Chromium] Fix build with DOM_STORAGE enabled.
Jeremy Orlow
Reported
2009-07-16 20:28:05 PDT
A few small changes so Chromium builds with DOM_STORAGE enabled.
Attachments
v1
(1.60 KB, patch)
2009-07-16 20:33 PDT
,
Jeremy Orlow
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2009-07-16 20:33:54 PDT
Created
attachment 32912
[details]
v1 * bindings/v8/DerivedSourcesAllInOne.cpp: Add the generated .ccp files. * storage/StorageAreaImpl.cpp: #include "DOMWindow.h" I'm sorry this didn't get attached to my previous v8 patch, but I _think_ this is the last change that needs to be made.
David Levin
Comment 2
2009-07-16 21:09:20 PDT
Comment on
attachment 32912
[details]
v1 Two nits which I can fix up on landing.
> Index: WebCore/ChangeLog > + * bindings/v8/DerivedSourcesAllInOne.cpp: Add the generated .ccp files.
Typo: ccp
> Index: WebCore/storage/StorageAreaImpl.cpp
> #include "EventNames.h" > #include "ExceptionCode.h" > +#include "DOMWindow.h" > #include "Frame.h"
Out of alphabetical order.
Jeremy Orlow
Comment 3
2009-07-16 21:15:26 PDT
Sorry about that! I should have looked closer before uploading apparently. :-(
David Levin
Comment 4
2009-07-17 00:13:22 PDT
Assign to levin for landing.
David Levin
Comment 5
2009-07-17 00:43:52 PDT
Committed as
http://trac.webkit.org/changeset/46022
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug